# otomvp

./: README.md  render.yaml
backend/: .gitignore  API.md  README.md  main.py  prefect_serve.py  pyproject.toml  seed_trends.py  swagger.yaml  try.py
backend/oto/: environment.py  server.py
backend/oto/domain/: analysis.py  clip.py  conversation.py  fireworks.py  job.py  point.py  transcript.py  trend.py  user.py
backend/oto/infra/: auth.py  database.py  fireworks.py  job.py  storage.py  vertexai.py
backend/oto/routers/: analysis.py  clip.py  conversation.py  point.py  transcript.py  trend.py  user.py
backend/oto/services/: create_cluster.py  edit_profile.py  extract_topic.py  onchain.py  safety.py  transcription.py  transcription_whisper.py
backend/oto/services/content/: audio_enhancer.py  clip.py  clip_construct.py  text_to_speech.py
backend/oto/services/conversation/: breakdown.py  highlight.py  insight.py  summary.py
backend/oto/tasks/content/: create_clip.py  create_clip_task.py
backend/oto/tasks/conversation/: analysis.py  extract.py  point.py  task.py  transcribe.py
backend/oto/tasks/topic/: create_trends.py
frontend/: README-API-INTEGRATION.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/contracts/: oto.json  oto.ts
frontend/hooks/: use-api.ts  use-clips.ts  useAnchorProvider.ts  useAudioPlayer.ts  useAudioSpectrum.ts  useAudioVisualizer.ts  useCaptions.ts  useOtoProgram.ts
frontend/lib/: api-service.ts  audio-spectrum.ts  audio-utils.ts  data-transformers.ts  data.ts  wavutil.ts
(+46 files in other folders)
